# human_demos

./: .gitignore  README  read_arduino.py  read_serial.py
NiCapture/: CMakeLists.txt  Makefile  simple_capture.cpp
arduino_data/: arduino_data.ino
hd_calib/: .calib_hydra_kinect.py.swp  .calib_hydra_kinect_pr2.py.swo  .calib_hydra_kinect_pr2.py.swp  .calib_hydra_pr2.py.swp  .calib_pr2.py.swp  T_as  T_as_03  T_gh  T_gm  calib_hydra_kinect.py  calib_hydra_kinect_pr2.py  calib_hydra_pr2.py  calib_pr2.py  calib_pr2_temp.py  calibration_pipeline.py  camera_calibration.py  cameras.py  capture_clouds.py  checkerboard_transform.py  cyni_camera_calibration.py  cyni_cameras.py  get_marker_transforms.py  get_transform.py  gripper.py  gripper_calibration.py  gripper_lite.py  hydra_calibration.py  image_sync_time.py  kinect_phasespace_calibration.py  phasespace.py  phasespace_calibration.py  quick_calibrate.py
hd_calib_cyni/: calibration_pipeline.py  cameras.py  gripper_calibration.py
hd_calib_old/: gripper_calibration.py
hd_deprecated/: do_task_floating_temp.py
hd_evaluate/: RopePR2Viz.py  call_run_test.py  classify.py  extract_env_snapshots.py  render_states.py  run_on_cloud.py  split_for_testing.py
hd_extract/: extract_data.py  extract_data_one_camera_demo.py  extract_hydra_data.py  extract_init_ar.py  extract_rgbd_data_demo.py  extract_rgbd_data_gpr_demo.py
hd_logging/: phasespace_logger.py
hd_misc/: .reset_usb
hd_playback/: center_pts  center_pts2  cluster_demos.py  cluster_initial.py  do_task.py  do_task_backup.py  do_task_floating.py  do_task_floating_simple.py  do_task_floating_temp.py  do_task_labeled.py  do_task_merge.py  extract_init.py  run_test.py  (+15 more)
robust_pose_icp/: CMakeLists.txt  alignment_prerejective.cpp  cust_align.cpp  discard_plane_points.cpp  lsfit.py  simple_icp.cpp
sparseicp/: CMakeLists.txt  ICP.h  try.cpp
(+374 files in other folders)
